--- a/IBT/trainingen.html
+++ b/IBT/trainingen.html
@@ -11,13 +11,13 @@
     <a href="/IBT/ibt.html">home</a> <br><br>
 
     -------------------------------------------------  <br>
-    | <a href="/IBT/trainingen/basis training.html">basis training</a>     |<br>
-    | <a href="/IBT/trainingen/RIjvaardigheid.html">Rijvaardigheid</a> |<br>
-    | <a href="/IBT/trainingen/Achtervolging.html">Achtervolging</a> |<br>
-    | <a href="/IBT/trainingen/zulu.html">zulu</a> |<br>
-    | <a href="/IBT/trainingen/undercover.html">undercover</a> |<br>
-    | <a href="/IBT/trainingen/specialforces.html">Specialforces</a> |<br>
-    | <a href="/IBT/trainingen/OVD.html">OVD</a> |<br>
+    | <a href="/trainingen/basis training.html">basis training</a>     |<br>
+    | <a href="/trainingen/RIjvaardigheid.html">Rijvaardigheid</a> |<br>
+    | <a href="/trainingen/Achtervolging.html">Achtervolging</a> |<br>
+    | <a href="/trainingen/zulu.html">zulu</a> |<br>
+    | <a href="/trainingen/undercover.html">undercover</a> |<br>
+    | <a href="/trainingen/specialforces.html">Specialforces</a> |<br>
+    | <a href="/trainingen/OVD.html">OVD</a> |<br>
     --------------------------------------------------
 </h2>
 
