--- a/IBT/trainingen.html
+++ b/IBT/trainingen.html
@@ -11,7 +11,7 @@
     <a href="/IBT/ibt.html">home</a> <br><br>
 
     -------------------------------------------------  <br>
-    | <a href="/trainingen/basis training.html">basis training</a>     |<br>
+    | <a href="/IBT/trainingen/basis training.html">basis training</a>     |<br>
     | <a href="/trainingen/RIjvaardigheid.html">Rijvaardigheid</a> |<br>
     | <a href="/trainingen/Achtervolging.html">Achtervolging</a> |<br>
     | <a href="/trainingen/zulu.html">zulu</a> |<br>
