--- a/IBT/trainingen.html
+++ b/IBT/trainingen.html
@@ -8,7 +8,7 @@
 <h1>trainingen</h1>
 
 <h2>
-    <a href="/IBT/ibt.html">home</a> <br><br>
+    <a href="ibt.html">home</a> <br><br>
 
     -------------------------------------------------  <br>
     | <a href="/IBT/trainingen/basis training.html">basis training</a>     |<br>
