--- a/IBT/ibt.html
+++ b/IBT/ibt.html
@@ -8,7 +8,7 @@
 <h1>welkom bij IBT website</h1>
 
 <h2>
-   <a href="index.html">website</a>  <br>
+   <a href="/hoodlife-leger/index.html">website</a>  <br>
     -------------------------------------------------  <br>
     | <a href="trainingen.html">trainingen</a>     |<br>
     | <a href="">roepnummers</a>    |<br>
