--- a/IBT/ibt.html
+++ b/IBT/ibt.html
@@ -11,8 +11,8 @@
    <a href="/hoodlife-leger/index.html">website</a>  <br>
     -------------------------------------------------  <br>
     | <a href="trainingen.html">trainingen</a>     |<br>
-    | <a href="">roepnummers</a>    |<br>
-    | <a href="">administraitie</a> |<br>
+    | <a href="roepnummers.html">roepnummers</a>    |<br>
+    | <a href="administratie.html">administraitie</a> |<br>
     --------------------------------------------------
 </h2>
 
