--- a/IBT/trainingen.html
+++ b/IBT/trainingen.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
   <title>IBT</title>
-  <link rel="stylesheet" href="/css/ibt.css">
+  <link rel="stylesheet" href="/hoodlife-leger/css/ibt.css">
    </head>
 
 <h1>trainingen</h1>
