--- a/IBT/trainingen.html
+++ b/IBT/trainingen.html
@@ -8,20 +8,20 @@
 <h1>trainingen</h1>
 
 <h2>
-    <a href="/IBT/ibt.html">home</a> <br><br>
+    <a href="/hoodlife-leger/IBT/ibt.html">home</a> <br><br>
 
     -------------------------------------------------  <br>
-    | <a href="/IBT/trainingen/basis training.html">basis training</a>     |<br>
-    | <a href="/IBT/trainingen/portofoon.html">portofoon</a>    |<br>
-    | <a href="/IBT/trainingen/RIjvaardigheid.html">Rijvaardigheid</a> |<br>
-    | <a href="/IBT/trainingen/Achtervolging.html">Achtervolging</a> |<br>
-    | <a href="/IBT/trainingen/portoleiding.html">portoleiding</a> |<br>
-    | <a href="/IBT/trainingen/zwaarwapen.html">zwaar wapen</a> |<br>
-    | <a href="/IBT/trainingen/lichte sniper.html">lichte sniper</a> |<br>
-    | <a href="/IBT/trainingen/undercover.html">undercover</a> |<br>
-    | <a href="/IBT/trainingen/specialforces.html">Specialforces</a> |<br>
-    | <a href="/IBT/trainingen/OVD.html">OVD</a> |<br>
-    | <a href="/IBT/trainingen/Motor.html">motor</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/basis training.html">basis training</a>     |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/portofoon.html">portofoon</a>    |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/RIjvaardigheid.html">Rijvaardigheid</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/Achtervolging.html">Achtervolging</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/portoleiding.html">portoleiding</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/zwaarwapen.html">zwaar wapen</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/lichte sniper.html">lichte sniper</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/undercover.html">undercover</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/specialforces.html">Specialforces</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/OVD.html">OVD</a> |<br>
+    | <a href="/hoodlife-leger/IBT/trainingen/Motor.html">motor</a> |<br>
     --------------------------------------------------
 </h2>
 
